syntax = "proto3";
package palomachain.paloma.scheduler;

import "palomachain/paloma/scheduler/job.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/palomachain/paloma/x/scheduler/types";

// Msg defines the Msg service.
service Msg {
  rpc CreateJob(MsgCreateJob) returns (MsgCreateJobResponse);
  rpc ExecuteJob(MsgExecuteJob) returns (MsgExecuteJobResponse);
}

message MsgCreateJob {
  string creator = 1;
  Job    job     = 2;
}

message MsgCreateJobResponse {}

message MsgExecuteJob {
  string creator = 1;
  string jobID   = 2;
  bytes  payload = 3;
}

message MsgExecuteJobResponse {
  // points to the ID of the consensus queue message created from the job execution
  uint64 messageID = 1;
}
